--- a/lab-04/styles.css
+++ b/lab-04/styles.css
@@ -10,7 +10,7 @@ body {
 	position: fixed;
 	top: 0.5rem;
 	right: 0.5rem;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(172, 30, 30, 0.5);
 	color: white;
 	font-size: 3em;
 	text-align: right;
